syntax = "proto3";

service Wallet {
    rpc createAddress (CreateAddressRequest) returns (CreateAddressResponse);
    rpc transaction (TransactionRequest) returns (TransactionResponse);
    rpc balance (BalanceRequest) returns (BalanceResponse);
    rpc walletInfo (WalletInfoRequest) returns (WalletInfoResponse);
}

message Transaction {
    string from_address = 1;
    string to_address = 2;
    int32 value = 3;
    string date = 4; 
}


message CreateAddressRequest { }
message CreateAddressResponse {
    string address = 1;
}


message TransactionRequest {
    Transaction transaction = 1;
}
message TransactionResponse {
    int64 transaction_id = 1;
}


message BalanceRequest {
    string address = 1;
}
message BalanceResponse {
    int64 total = 1;
    int64 available = 2;
}


message WalletInfoRequest {
    string address = 1;
}
message WalletInfoResponse {
    int64 total = 1;
    int64 available = 2;
    repeated Transaction transactions = 3;
}
